# Fingerprint

./: .dockerignore  .env.dev.example  .env.prod.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  PLAN.md  README.md  compose.yml  pyproject.toml
.codex/: actions.yaml
.codex/rules/: default.rules
.github/workflows/: deploy.yml
docs/: DESIGN.md  PLANS.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md
docs/design-docs/: core-beliefs.md  index.md  layering-and-constraints.md  parallel-execution.md
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/active/: README.md  fingerprint-worker-clean-schema-compat.md
docs/exec-plans/completed/: README.md
docs/product-specs/: fingerprint-worker-v1.md  index.md
scripts/: lint_architecture.py  lint_diagram.py  lint_file_size.py  lint_no_print.py  run_fixture_smoke.py  setup-ubuntu-ssdeep.sh  sync_diagram_hash.py
src/: fingerprint_core.py  fingerprint_http.py  fingerprint_tls.py  fixture_server.py  worker.py  worker_io.py
src/fingerprint_worker/: __init__.py  main.py
src/fingerprint_worker/config/: __init__.py  env.py
src/fingerprint_worker/providers/: __init__.py  convex_provider.py  http_provider.py  logging_provider.py  tls_provider.py
src/fingerprint_worker/repo/: __init__.py  job_io.py
src/fingerprint_worker/runtime/: reporting.py  worker.py
src/fingerprint_worker/service/: fingerprint_core.py  http_analysis.py  (+2 more)
tests/: test_core.py  test_fingerprint_tls.py  test_fixture_smoke.py  test_worker_config.py  test_worker_io.py  test_worker_reporting.py
tests/fixtures/: jobs.json
(+4 files in other folders)
